remove range search funcitonality - too much to deal with right now; fix bug with month/year range causing searching to fail:

--- a/workout2little-app/src/App.css
+++ b/workout2little-app/src/App.css
@@ -12,16 +12,37 @@
 body {
   	font-family: 'Inter', 'Helvetica', sans-serif;
 	background-color: rgb(255,248,231);
-	/* color: white; */
+}
+
+@media (max-width: 700px) {
+	.content {
+		flex-direction: column;
+	}
 }
 
 .App {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+}
+
+.content {
   	display: flex;
 	align-items: center;
 	justify-content: center;
-	margin-top: 50px;
-	/* flex-direction: column; */
+	/* margin-top: 1%; */
 }
+
+.loader {
+	position: fixed;
+	color: red;
+	top: 10px;
+}
+
+.show-more-info {
+
+}
+
 /* ------ BUTTON STYLING ------ */
 
 @keyframes button-hover {
@@ -62,3 +83,6 @@ button.selected {
 button.selected:hover {
 	animation: none;
 }
+
+
+/* ------ INFO STYLING ------ */
